@@ -48,6 +48,9 @@ tape file and prints it to standard output.
 .\"
 .SH OPTIONS
 .TP
+.I \-b
+specifies that the program to list is a Beta BASIC program.
+.TP
 .I file
 specifies a snapshot or tape image from which to extract the BASIC,
 which must be in a format supported by
